# email-downloader

./: .gitattributes  .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: blobstore.rs  commands.rs  config.rs  error.rs  extract.rs  gmail_query.rs  hashing.rs  jobs.rs  lib.rs  logging.rs  main.rs  model.rs  parser.rs  rate_limiter.rs  report.rs  retention.rs  search.rs  storage.rs
src-tauri/src/auth/: mod.rs
src-tauri/src/export/: eml.rs  mbox.rs  mod.rs  msg.rs  pst.rs
src-tauri/src/providers/: gmail.rs  imap.rs  mod.rs
src-tauri/tests/fixtures/: sample.eml  sample.mbox  sample_with_xlsx.eml
src/components/layout/: AppLayout.tsx  Sidebar.tsx
src/components/ui/: select.tsx  tabs.tsx  textarea.tsx
src/features/accounts/: AccountsPage.tsx
src/features/backup/: BackupPage.tsx
src/features/browse/: BrowsePage.tsx
src/features/extract/: ExtractPage.tsx
src/features/jobs/: JobsPage.tsx
src/features/settings/: SettingsPage.tsx
src/lib/: ipc.ts  types.ts  utils.ts
src/stores/: appStore.ts
